# simpleapp

./: .gitignore  Dockerfile  LICENSE  pyproject.toml
src/: server.py
