[tool.poetry]
name = "simpleapp"
version = "0.1.0"
description = "Simple Flask app for DSCB230"
package-mode = false
authors = ["Lukas Weiß <lweiss.weiss@exxeta.com>"]

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
